# prism-rag

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
docs/: ARCHITECTURE.md  STATUS.md  TEST_REPORT.md  architecture-diagram.mmd  deep-research-study.md  research-pdf-rag.md  study-mode-design.md  study-mode-spec.md
docs/architecture/: README.md
docs/architecture/src/: 01-current.d2  02-target.d2  03-flow.mmd  04-progress-model.dot
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  Markdown.tsx  api.ts  types.ts
scripts/: test_book.py
src/: config.py  main.py
src/api/: dependencies.py
src/api/models/: ingest.py  query.py  study.py
src/api/routes/: collections.py  health.py  ingest.py  query.py  study.py
src/embeddings/: embedder.py
src/ingestion/: base.py  chunker.py  pdf_parser.py  pipeline.py  structure.py
src/rag/: engine.py  generator.py  prompts.py  retriever.py
src/study/: engine.py  modes.py  quiz.py  text.py
src/ui/: app.py
src/vectorstore/: qdrant_store.py
tests/: conftest.py  test_api.py
tests/test_ingestion/: test_pipeline.py
tests/test_rag/: test_engine.py
tests/test_study/: test_quiz_retry.py  test_study.py  test_text.py
tests/test_vectorstore/: test_qdrant.py
